--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-/* Import Google font - Open Sans */
+/* function to Import Google font - Open Sans */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');
 * {
   margin: 0;
   padding: 0;
+  
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
 }
@@ -29,6 +30,7 @@ h1 {
   width: 100%;
   outline: none;
   font-size: 1.07rem;
+  
   padding: 0 17px;
   margin: 10px 0 20px 0;
   border-radius: 4px;
@@ -42,6 +44,7 @@ h1 {
   height: 1px;
   width: 100%;
   margin: 25px 0;
+  
   background: #BBBBBB;
   display: flex;
   align-items: center;
@@ -51,6 +54,7 @@ h1 {
   content: "or";
   color: #6C757D;
   font-size: 1.18rem;
+  
   padding: 0 15px;
   margin-top: -4px;
   background: #E3F2FD;
@@ -60,6 +64,7 @@ h1 {
   padding: 10px 0;
   cursor: pointer;
   outline: none;
+  
   border: none;
   border-radius: 4px;
   font-size: 1rem;
@@ -94,6 +99,7 @@ h1 {
 .weather-data h6 {
   margin-top: 12px;
   font-size: 1rem;
+  
   font-weight: 500;
 }
 .current-weather .icon {
@@ -120,6 +126,7 @@ h1 {
   padding: 18px 16px;
   list-style: none;
   width: calc(100% / 5);
+  
   background: #6C757D;
   border-radius: 5px;
 }
@@ -163,6 +170,7 @@ h1 {
   }
   .container {
     flex-wrap: wrap;
+    
     padding: 15px;
   }
   .weather-input {
