--- a/style.css
+++ b/style.css
@@ -180,12 +180,14 @@ h1 {
     font-size: 1.35rem;
   }
 }
-.footer {
+@footer {
  background: #5372F0;
   font-size: 1.75rem;
   text-align: center;
-  padding: 18px 0;
  font-weight: 600;
- padding: 20px 70px 20px 20px;
+ padding: 20px;
   color: #fff;
+}
+.footer p .h3 {
+  margin: 0; 
 }
